Accessibility changes for Homepage, Search, Result and Map page: - added aria-roles and labels - color contrast issues - headings in right order (start with <h1> instead of <h3>)
Added `Rijkshuisstijl` color scheme (blues and grays)

--- a/less/gn_search_dutch.less
+++ b/less/gn_search_dutch.less
@@ -46,12 +46,14 @@
     }
   }
   .gn-status {
-    border: 2px solid darken(@brand-info, 5%);
+    border: 2px solid darken(@brand-info, 25%);
+    color: darken(@brand-info, 25%);
     top: 12px;
     left: auto;
     right: 90px;
     border-radius: 2px;
     padding: 2px;
+    background: #fff;
   }
   .gn-status-mdview {
     font-size: 110%;
@@ -63,16 +65,16 @@
   /* Decide here which status should be displayed
   or not and with which colors */
   .gn-status-completed {
-    border-color: darken(@brand-success, 5%);
-    color: @brand-success;
+    border-color: darken(@brand-success, 20%);
+    color: darken(@brand-success, 20%);
   }
   .gn-status-historicalArchive {
-    border-color: darken(@brand-warning, 5%);
-    color: @brand-warning;
+    border-color: darken(@brand-warning, 30%);
+    color: darken(@brand-warning, 30%);
   }
   .gn-status-obsolete {
     border-color: darken(@brand-danger, 5%);
-    color: @brand-danger;
+    color: darken(@brand-danger, 5%);
   }
 }
 
