--- a/less/gn_view_dutch.less
+++ b/less/gn_view_dutch.less
@@ -21,13 +21,12 @@
 // ----------------------------------------------------------------------
 
 .branding {
-  padding-left: 50%;
+  text-align: center;
   min-height: 80px;
   background-color:white;
   .gn-logo {
     min-height: 70px;
     max-height: none;
-    margin-left: -25px;
   }
 }
 
@@ -64,6 +63,11 @@ body,p,div,span,a,blockquote,.btn {
   margin-right: .3em;
   margin-top: 7px;
 }
+
+a {
+  color: @ro-darkblue-full;
+}
+
 
 // ----- alerts
 .alert {
@@ -127,10 +131,12 @@ body,p,div,span,a,blockquote,.btn {
 
 // ----- toggle option
 .collapse-text-toggle {
+  color: @ro-gray-6;
   cursor: pointer;
-}
-.collapse-text-toggle:hover {
-  text-decoration: underline;
+  &:hover {
+    color: @ro-gray-7;
+    text-decoration: underline;
+  }
 }
 
 // ----- keywords
@@ -138,15 +144,15 @@ body,p,div,span,a,blockquote,.btn {
   margin-right: 3px;
   color: #333;
   text-decoration: underline;
-}
-.dutch-keyword:hover {
-  color: #000;
-}
-.dutch-keyword:after {
-  content: ","
-}
-.dutch-keyword:last-child:after {
-  content: ""
+  &:hover {
+    color: #000;
+  }
+  &:after {
+    content: ","
+  }
+  &:last-child:after {
+    content: ""
+  }
 }
 // ----- sort label
 .dutch-sort-label {
@@ -210,6 +216,7 @@ body,p,div,span,a,blockquote,.btn {
   li.disabled {
     a {
       pointer-events: none;
+      color: #707070;
     }
   }
   // remove the double toggle buttons
@@ -278,9 +285,10 @@ body,p,div,span,a,blockquote,.btn {
 // ----- list of categories
 .dutch-categories {
   text-align: center;
-}
-.dutch-categories h3 {
-  margin-bottom: 50px;
+  h1, h3 {
+    margin-bottom: 50px;
+    font-size: 24px;
+  }
 }
 // ----- single category
 .dutch-category {
